# sgkit-publication

./: Makefile  README.md  oup-contemporary.cls  paper.bib  paper.tex
.github/workflows/: manubot.yaml
content/: 01.outline.md  02.abstract.md  03.introduction.md  10.popgen.md  manual-references.json  metadata.yaml
data/: Makefile  run_conversion.sh
diagrams/: data-model-preamble.tex  data-model.tex
plot_data/: data-scaling.csv  data_scaling.csv  subset-matrix-compute.csv  subset_matrix_compute.csv  time-scaling.csv  whole-matrix-compute.csv
scaling/: Makefile  run_conversion.sh  vcf2zarr_prototype.py  write_vcf.py
software/: Makefile
software/savvy-afdist/: CMakeLists.txt  main.cpp
src/: collect_data.py  convert.py  plot.py
